--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
-      <nav>
-<ul>
-    <a href="education.html"><li>Educational Attainment</li></a>
-    <a href="work.html"><li>Work Experience</li></a>
-    <a href="interest.html"><li>Interests</li></a>
-    <a href="contact.html"><li>Contact</li></a>
-</ul>
 
-</nav>
+    <nav>
+        <div class="nav-wrapper">
+          <a href="index.html" class="brand-logo right"><u>Home</u></a>
+          <ul class="left hide-on-med-and-down">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="education.html">Educational Attainment</a></li>
+            <li><a href="work.html">Work Experience</a></li>
+            <li><a href="interest.html">Hobby</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
 
-    </header>
 
 <div id="titleMain">
   
@@ -38,15 +41,13 @@
 
 
 
-<div id="box1">
+<div id="Box1">
 <div><h3 id="box-paragraph"><p >I started gaining an interest in Programming last
     April of this year. I've always thought that it was a complex course/program to
     follow until I tried learning it myself.</p>
 </h3></div>
 
 </div>
-
-
 
 
 <div id="headGallery">
@@ -69,6 +70,7 @@
 </div>
 
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     
 </body>
