--- a/interest.html
+++ b/interest.html
@@ -4,20 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interest</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
     <header>
+       
         <nav>
-  <ul>
-        <a href="index.html"><li>Home</li></a>
-      <a href="education.html"><li>Educational Attainment</li></a>
-      <a href="work.html"><li>Work Experience</li></a>
-      <a href="contact.html"><li>Contact</li></a>
-  </ul>
-  
-  </nav>
+            <div class="nav-wrapper">
+              <a href="interest.html" class="brand-logo right"><u>Hobby</u></a>
+              <ul class="left hide-on-med-and-down">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="education.html">Educational Attainments</a></li>
+                <li><a href="work.html">Work Experience</a></li>
+                <li class="active"><a href="interest.html">Hobby</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+          </nav>
+    
+
+          <div class="wrapper">
+            <div class="box a"><img src="basketball1.jpg" 
+              alt="basketball1" height="300px" width="300px"></div>
+            <div class="box b"><img src="work.jpg"
+              alt="work" height="300px" width="300px"></div>
+            <div class="box c"></div>
+            <div class="box d"><img src="dog.jpg"
+            alt="val" height="300px" width="300px"></div>
+            <div class="box e"><img src="dog1.jpg"
+            alt="steven" height="300px" width="300px"></div>
+            <div class="box f"><img src="baby.jpg"
+            alt="baby" height="300px" width="300px"></div>
+          </div>
+
+
+
+
+
+
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   
       </header>
 </body>
