--- a/education.html
+++ b/education.html
@@ -4,23 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <header>
-<nav>
-    <ul>
-        <a href="index.html"><li>Home</li></a>
-        <a href="work.html"><li>Work Experience</li></a>
-        <a href="interest.html"><li>Interests</li></a>
-        <a href="contact.html"><li>Contact</li></a>
-    </ul>
     
 
-</nav>
+        <nav>
+            <div class="nav-wrapper">
+              <a href="education.html" class="brand-logo right"><u>Educational Attainment</u></a>
+              <ul class="left hide-on-med-and-down">
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="education.html">Educational Attainment</a></li>
+                <li><a href="work.html">Work Experience</a></li>
+                <li><a href="interest.html">Hobby</a></li>
+                <li ><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+          </nav>
 
-    </header>
+
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   
 
     
 </body>
