--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
 
 <div id="firstPic">
     <div><img src="basketball.jpg" alt="basketball" class="basketball"></div>
-    <h3 id="descPic"><p>I was a Varsity Basketball Player in High School, we 
-        competed in our city's biggest Basketball tournament. Unfortunately,
-        we were unable to win the Championship. We were the 2nd runner up, still
-        a joyous moment for us.
+    <h3 id="descPic"><p>I was a Varsity Basketball Player in High School.
     </p></h3>
 </div>
 
@@ -72,6 +69,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    
+
 </body>
 </html>
