--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <div id="firstPic">
     <div><img src="basketball.jpg" alt="basketball" class="basketball"></div>
-    <h3 id="descPic"><p>I was a Varsity Basketball Player in High School.
+    <h3 id="descPic"><p>I was a Varsity Basketball Player in HS.
     </p></h3>
 </div>
 
