--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 
 <div id="Box1">
 <div><h3 id="box-paragraph"><p >I started gaining an interest in Programming last
-    April of this year. I've always thought that it was a complex course/program to
-    follow until I tried learning it myself.</p>
+    April of this year. .</p>
 </h3></div>
 
 </div>
