--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,11 @@
       </nav>
 
 
-      <div class="contact-box">
-        <form class="col s12">
-          <div class="row">
+    <div class="contact-box">
+      <div class="row">
+        <form name="contact"method="POST" 
+        data-netlify="true"></form>class="col s12">
+        <input type="hidden" name="form-name" value="contact" />
             <div class="input-field col s12">
               <i class="material-icons prefix">account_circle</i>
               <input id="icon_prefix" type="text" class="validate">
@@ -52,8 +54,8 @@
               <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                 <i class="material-icons right">send</i>
               </button>
-          </div>
-        </form>
+         </form>
+        </div>
       </div>
 
 
