--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
 
     <div class="contact-box">
       <div class="row">
-        <form name="contact"method="POST" 
-        data-netlify="true"></form>class="col s12">
-        <input type="hidden" name="form-name" value="contact" />
+        <form name="contact" method="POST" 
+        data-netlify="true class="col s12">
+        <input type="hidden" name="form-name" value="Contact" />
             <div class="input-field col s12">
               <i class="material-icons prefix">account_circle</i>
               <input id="icon_prefix" type="text" class="validate">
